clients: rewrite as Client model with pluggable identifier
